<resources>
    <string name="app_name">计算器</string>

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="jia">+</string>
    <string name="jian">-</string>
    <string name="cheng">×</string>
    <string name="chu">÷</string>
    <string name="dian">.</string>
    <string name="dengYu">=</string>
    <string name="kuoHaoTou">(</string>
    <string name="kuoHaoWei">)</string>

    <string name="errorText">算式错误!</string>
    <string name="chuLingErrorText">除数为零!</string>

    <string name="edit">编辑</string>
    <string name="undo">撤消</string>
    <string name="redo">重做</string>
    <string name="done">完成</string>
    <string name="zhenDong">震动反馈</string>
    <string name="yuYin">语音提示</string>
    <string name="theme">主题</string>
    <string name="about">关于与帮助</string>
    <string name="history">历史记录</string>
    <string name="setting">设置</string>

    <string name="unableUndo">已不可撤消</string>
    <string name="unableRedo">已不可重做</string>
    <string name="sureExit">再按一次退出计算器</string>
    <string name="selectTTS">请到设置选择可用的TTS程序</string>

    <string name="updateLog">本次更新</string>
    <string name="updateHistory">历史更新日志</string>
    <string name="helpWord">帮助文档</string>

    <string name="aboutVersion">计算器 v4.4(22)</string>
    <string name="aboutWords">简单，但却不一般</string>
    <string name="aboutDeveloper">作者：酷安@log_Z</string>
    <string name="aboutXBB_Title">
        对于本应用：
    </string>
    <string name="aboutXBB_Help">
        ▶ 如果您不太会用，可以查看详细的<a href="">帮助文档</a>。
    </string>
    <string name="aboutXBB_UpdateHistory">
        ▶ 如果您想了解更多，可以浏览<a href="">历史更新日志</a>。
    </string>
    <string name="aboutXBB_OpenSource">
        ▶ 如果您感觉有点意思，可以翻阅此<a href="">开源项目</a>。
    </string>
    <string name="aboutXBB_ScoreAndFeedback">
        ▶ 如果您觉得还不错，可以来一发<a href="">评分或反馈</a>。
    </string>
    <string name="aboutXBB_Donate">
        ▶ 如果您非常喜欢，也绝对可以<a href="">捐赠</a>一下作者。
    </string>
    <string name="openSourceLink">https://github.com/log-Z/Calculator</string>
    <string name="alipayUrl">https://qr.alipay.com/FKX01909KFYASDIWFWA073</string>
    <string name="donateToast"
        >十分的感谢！\n捐赠链接已复制，如果不能正常跳转，请复制到其它浏览器打开
    </string>

    <string name="comeBreak">返回计算器</string>
    <string name="deleteHistory">批量删除</string>
    <string name="deleteHistoryOf_aYearAgo">一年之前</string>
    <string name="deleteHistoryOf_halfAYearAgo">半年之前</string>
    <string name="deleteHistoryOf_aMonthAgo">一个月之前</string>
    <string name="deleteHistoryOf_halfAMonthAgo">半个月之前</string>
    <string name="deleteHistoryOf_aWeekAgo">一个星期之前</string>
    <string name="deleteHistoryOf_all">所有</string>
    <string name="deleteImportance">同时删除重要记录</string>
    <string name="deleting">正在清空历史记录</string>
    <string name="deleteSure">批量删除成功</string>
    <string name="deleteError">批量删除失败，稍后请重试</string>
    <string name="copyError">复制失败，请重试</string>
    <string name="copyAll">算式和结果已复制</string>
    <string name="loadToCalculator">载入到计算器</string>
    <string name="editTag">编辑标签</string>
    <string name="editTagHint">建议标签不超过6个字</string>

    <string name="_default">默认</string>
    <string name="more">更多</string>
    <string name="delete">删除</string>
    <string name="sure">确认</string>
    <string name="close">取消</string>
    <string name="ok">确定</string>
    <string name="exit">关闭</string>
    <string name="on">打开</string>
    <string name="off">关闭</string>
    <string name="wu">无</string>

    <string-array name="capsNum">
        <item>零</item>
        <item>壹</item>
        <item>贰</item>
        <item>叁</item>
        <item>肆</item>
        <item>伍</item>
        <item>陆</item>
        <item>柒</item>
        <item>捌</item>
        <item>玖</item>
    </string-array>

    <string name="capsFen">分</string>
    <string name="capsJiao">角</string>
    <string name="capsYuan">元</string>
    <string name="capsShi">拾</string>
    <string name="capsBai">佰</string>
    <string name="capsQian">仟</string>
    <string name="capsWan">万</string>
    <string name="capsYi">亿</string>
    <string name="capsZheng">整</string>
    <string name="capsFu">负</string>

    <string name="fontSize">字体大小</string>
    <string name="fontSizeForEquation">算式区</string>
    <string name="fontSizeForNums">数值区</string>
    <string name="fontSizeForButton">按键面板</string>
    <string name="statusBar">状态栏</string>
    <!-- 请勿修改键值 Start -->
    <string-array name="statusBar_key">
        <item>transparent</item>
        <item>translucent</item>
        <item>black</item>
    </string-array>
    <!-- 请勿修改键值 End -->
    <string-array name="statusBar_item">
        <item>透明</item>
        <item>半透明</item>
        <item>省电黑</item>
    </string-array>
    <string name="navigationBar">导航栏</string>
    <!-- 请勿修改键值 Start -->
    <string-array name="navigationBar_key">
        <item>transparent</item>
        <item>translucent</item>
        <item>black</item>
    </string-array>
    <!-- 请勿修改键值 End -->
    <string-array name="navigationBar_item">
        <item>透明</item>
        <item>半透明</item>
        <item>省电黑</item>
    </string-array>

    <string name="onTTS">使用TTS语音</string>
    <string name="onTTSSummary">使用TTS（文字转语音）引擎代替自带语音</string>
    <string name="setTTS_program">选择TTS引擎</string>
    <string name="other">其它</string>

    <string name="mainActivityHistoryVisibility">主页显示</string>
    <string name="mainActivityHistoryVisibilitySummary">在主页显示最近一次的历史记录</string>

    <string name="calculate">计算</string>
    <string name="autoLineFeed">自动换行</string>
    <!-- 请勿修改键值 Start -->
    <string-array name="autoLineFeed_key">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!-- 请勿修改键值 End -->
    <string-array name="autoLineFeed_item">
        <item>关闭</item>
        <item>加减(不在括号中的)</item>
        <item>加减</item>
        <item>加减乘除(不在括号中的)</item>
        <item>加减乘除</item>
    </string-array>

    <string name="resultsAgainCalculation">对结果计算时</string>
    <!-- 请勿修改键值 Start -->
    <string-array name="resultsAgainCalculationKey">
        <item>resultsAgainCalculation_resultPreferred</item>
        <item>resultsAgainCalculation_formulaPreferred</item>
    </string-array>
    <!-- 请勿修改键值 End -->
    <string name="resultsAgainCalculation_resultPreferred_item">结果优先</string>
    <string name="resultsAgainCalculation_formulaPreferred_item">算式优先</string>
    <string-array name="resultsAgainCalculationItem">
        <item>@string/resultsAgainCalculation_resultPreferred_item</item>
        <item>@string/resultsAgainCalculation_formulaPreferred_item</item>
    </string-array>

    <string name="historyDeleteAuto">自动删除</string>
    <string-array name="historyDeleteAuto_item">
        <item>@string/off</item>
        <item>@string/deleteHistoryOf_aYearAgo</item>
        <item>@string/deleteHistoryOf_halfAYearAgo</item>
        <item>@string/deleteHistoryOf_aMonthAgo</item>
        <item>@string/deleteHistoryOf_halfAMonthAgo</item>
        <item>@string/deleteHistoryOf_aWeekAgo</item>
        <item>@string/deleteHistoryOf_all</item>
    </string-array>
    <!-- 请勿修改键值 Start -->
    <string-array name="historyDeleteAuto_key">
        <item>deleteHistoryAutoOf_off</item>
        <item>deleteHistoryAutoOf_aYearAgo</item>
        <item>deleteHistoryAutoOf_halfAYearAgo</item>
        <item>deleteHistoryAutoOf_aMonthAgo</item>
        <item>deleteHistoryAutoOf_halfAMonthAgo</item>
        <item>deleteHistoryAutoOf_aWeekAgo</item>
        <item>deleteHistoryAutoOf_all</item>
    </string-array>
    <!-- 请勿修改键值 End -->

    <string name="restoreSettings">重置设置</string>
    <string name="restoreSettingsSummary">将设置重置为默认设置</string>

    <string name="errorStr">
        &lt; 发现未知错误 &gt;\n崩溃日志已复制，请尽快反馈给作者，多谢！\n\n
    </string>

</resources>
